fix pages being broken on very wide screens
also fixed the scrolling of the top bar to use actual page height instead of window height

--- a/apps/megaphone-ui/src/styles.scss
+++ b/apps/megaphone-ui/src/styles.scss
@@ -78,6 +78,7 @@ a {
   box-sizing: border-box;
 
   width: 100vw;
+  min-height: $min-height;
   height: 100vh;
   max-width: 100%;
 
