--- a/apps/megaphone-ui/src/variables.scss
+++ b/apps/megaphone-ui/src/variables.scss
@@ -4,5 +4,7 @@ $accent-text-color: #0ac6ff;
 
 $top-bar-height: 5rem;
 
+$min-height: 800px;
+
 $mobile-breakpoint: 640px;
 $tablet-breakpoint: 1024px;
